Config Vite Deploy File

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movie-website",
+  "homepage": "https://sangfgw.github.io/MINDX-CIJS-PROJECT/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
